<resources>
    <string name="app_name">Healthygram</string>
    <string name="editTextTextEmailAddress">Username</string>
    <string name="editTextTextPassword">Password</string>
    <string name="editTextNumberDecimal">In kg</string>
    <string name="editTextNumberDecimal2">In meter</string>
    <string name="editTextNumber2">Qty</string>
    <string name="radioButton">Male</string>
    <string name="radioButton2">Female</string>
    <string name="textView">Welcome to Healthygram</string>
    <string name="textView2">Give us some details about you</string>
    <string name="textView3">What is your gender?</string>
    <string name="textView4">How old are you?</string>
    <string name="textView5">What is your weight?</string>
    <string name="textView6">What is your height?</string>
    <string name="textView7">Healthygram</string>
    <string name="textView8">Nutrition</string>
    <string name="textView9">Workout</string>
    <string name="textView10">Personal</string>
    <string name="textView12">Statistics</string>
    <string name="textView13">Workout</string>
    <string name="textView14">My achievements</string>
    <string name="textView15">BMI is a measurement of a person\'s leanness or corpulence based on their height and weight, and is intended to quantify tissue mass. It is widely used as a general indicator of whether a person has a healthy body weight for their height. Specifically, the value obtained from the calculation of BMI is used to categorize whether a person is underweight, normal weight, overweight, or obese depending on what range the value falls between. These ranges of BMI vary based on factors such as region and age, and are sometimes further divided into subcategories such as severely underweight or very severely obese. Being overweight or underweight can have significant health effects, so while BMI is an imperfect measure of healthy body weight, it is a useful indicator of whether any additional testing or action is required.</string>
    <string name="textView16">My profile</string>
    <string name="textView17">Gender</string>
    <string name="textView18">Age</string>
    <string name="textView19">Weight</string>
    <string name="textView20">Height</string>
    <string name="textView22">BMI Calculator</string>
    <string name="textView23">Food Calorie</string>
    <string name="textView24">BMR Calculator</string>
    <string name="textView26">Classification</string>
    <string name="textView27">BMI range - kg/m2</string>
    <string name="textView28">Severe Thinness</string>
    <string name="textView29">- 16</string>
    <string name="textView30">Moderate Thinness</string>
    <string name="textView31">16 – 17</string>
    <string name="textView32">Mild Thinness</string>
    <string name="textView33">17 – 18.5</string>
    <string name="textView34">Normal</string>
    <string name="textView35">18.5 – 25</string>
    <string name="textView36">Overweight</string>
    <string name="textView37">25 – 30</string>
    <string name="textView38">Obese Class I</string>
    <string name="textView39">30 – 35</string>
    <string name="textView40">Obese Class II</string>
    <string name="textView41">35 – 40</string>
    <string name="textView42">Obese Class III</string>
    <string name="textView43">>40</string>
    <string name="textView44">The basal metabolic rate (BMR) is the amount of energy needed while resting in a temperate environment when the digestive system is inactive. It is the equivalent of figuring out how much gas an idle car consumes while parked. In such a state, energy will be used only to maintain vital organs, which include the heart, brain, kidneys, nervous system, intestines, liver, lungs, sex organs, muscles, and skin. For most people, upwards of ~70% of total energy (calories) burned each day is due to upkeep. Physical activity makes up ~20% of expenditure and ~10% is used for the digestion of food, also known as thermogenesis.</string>
    <string name="textView45">Activity Level</string>
    <string name="textView46">Calories</string>
    <string name="textView47">Sedentary: little or no exercise</string>
    <string name="textView49">Exercise 1–3 times/week</string>
    <string name="textView51">Exercise 4–5 times/week</string>
    <string name="textView53">Daily or intense exercise 3–4 times/week</string>
    <string name="textView55">Intense exercise 6–7 times/week</string>
    <string name="textView57">Intense exercise daily or physical job</string>
    <string name="textView59">Your basic BMR = </string>
    <string name="textView61">Calories/day</string>
    <string name="textView62">Helpful Tips</string>
    <string name="textView65">*Exercise: 15–30 minutes of elevated heart rate activity.\n*Intense exercise: 45–120 minutes of elevated heart rate activity.\n*Very intense exercise: 2+ hours of elevated heart rate activity.</string>
    <string name="textView66">Total calories intake in the day:</string>
    <string name="textView68">Calories needed to burn:</string>
    <string name="textView70">Choose a meal to add food</string>
    <string name="textView72">Total calories:</string>
    <string name="textView74">Exercise</string>
    <string name="textView76">How often do you exercise?</string>
    <string name="textView78">Select food</string>
    <string name="textView79">Quantity</string>
    <string name="textView80">Title</string>
    <string name="textView81">Calories</string>
    <string name="textView82">Steps Made</string>
    <string name="textView83">Bronze</string>
    <string name="textView84">Silver</string>
    <string name="textView85">Gold</string>
    <string name="textView86">Calories Burned</string>
    <string name="textView90">Total Training Hours</string>
    <string name="textView94">Chest</string>
    <string name="textView95">Select a specific day to see more details</string>
    <string name="textView96">Weight</string>
    <string name="textView100">Training In Hours*</string>
    <string name="textView102">Calories Burned**</string>
    <string name="textView104">Calories Intake</string>
    <string name="textView106">Muscle Groups</string>
    <string name="textView107">Interval Timer</string>
    <string name="textView108">Steps Counter</string>
    <string name="textView110">Sets</string>
    <string name="textView111">Workout</string>
    <string name="textView112">Rest</string>
    <string name="textView113">Steps</string>
    <string name="textView118">:</string>
    <string name="textView121">Date :</string>
    <string name="textView124">*This data is calculated from interval time activity in workout menu by saving workout time data\n\n**This data is calculated from calories burned in both training and steps</string>
    <string name="textView125">Back</string>
    <string name="textView126">Shoulders</string>
    <string name="textView127">Arms</string>
    <string name="textView128">Legs</string>
    <string name="textView129">Abs</string>
    <string name="textView130">Exercises</string>
    <string name="textView132">Sets</string>
    <string name="textView133">Repeats</string>
    <string name="textView137">How long would it take to burn off the day\'s calories?</string>
    <string name="textView138">Walking</string>
    <string name="textView140">Running</string>
    <string name="textView142">Bicycling</string>
    <string name="button">Login</string>
    <string name="button2">Register</string>
    <string name="button4">Next</string>
    <string name="button5">Done</string>
    <string name="button7">Meals</string>
    <string name="button8">Save</string>
    <string name="button9">Start</string>
    <string name="button10">Clear</string>
    <string name="searchView">Search here...</string>
</resources>