<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">

    <ImageButton
        android:id="@+id/imageButton28"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:onClick="personal"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <ImageButton
        android:id="@+id/imageButton29"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:onClick="statistics"
        android:scaleType="fitXY"
        android:src="@drawable/statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <ImageButton
        android:id="@+id/imageButton30"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:onClick="home"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_home_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView22"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <com.ekn.gruzer.gaugelibrary.HalfGauge
        android:id="@+id/halfGauge"
        android:layout_width="184dp"
        android:layout_height="348dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView26"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/textView27"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView27"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold">

            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView28"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/textView29"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView29"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/thirdRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView30"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/textView31"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView31"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/fourthRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView32"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/textView33"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView33"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/fifthRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView34"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/textView35"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView35"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/sixthRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView36"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/textView37"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView37"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/seventhRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView38"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/textView39"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView39"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/eighthRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView40"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/textView41"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView41"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>
        </TableRow>
        <TableRow
            android:id="@+id/ninthRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/textView42"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <TextView
                android:id="@+id/textView43"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/textView43"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>
        </TableRow>

    </TableLayout>

    <ScrollView
        android:layout_width="379dp"
        android:layout_height="353dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/textView15"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.785" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>